istio/sidecar-scope/sidecar-proxy.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: proxy-level
  namespace: default
spec:
  egress:
  - hosts:
    - default/*
    - istio-system/*
    - kube-system/kube-dns.kube-system.svc.cluster.local
    - monitoring/*
  workloadSelector:
    labels:
      app: fortio
